<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/cv_scholarship_news"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="1dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:dividerHeight="0.0px"
    android:elevation="8dp"
    card_view:cardElevation="10dp"
    card_view:cardPreventCornerOverlap="false">
    <LinearLayout
        android:id="@+id/linear_layout_scholarship_news"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textIsSelectable="true"
            android:id="@+id/scholarship_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:textColor="#000"
            android:text="@string/news_title"
            android:textSize="26sp"
            android:gravity="start" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_margin="0dp"
            android:padding="2dp">
            <TextView
                android:id="@+id/tv_scholarship_post_by_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/post_by"
                android:layout_weight="0.5"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/tv_scholarship_post_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/post_by_name"
                android:layout_weight="1.5"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/tv_scholarship_post_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/posted_on"
                android:textSize="12sp"
                android:layout_weight="0.5"
                />
            <TextView
                android:id="@+id/tv_scholarship_post_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/posted_on_date"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_weight="1.5"
                />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/iv_scholarship_image"
                android:layout_gravity="center"
                android:src="@drawable/image_default"
                android:contentDescription="@string/todo" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:textIsSelectable="true"
            android:id="@+id/tv_scholarship_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:textColor="#000"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:text="@string/news_title"
            android:layout_gravity="start"/>
        <View
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_margin="0dp"
            android:padding="2dp">
            <TextView
                android:id="@+id/tv_scholarship_deadline_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.5"
                android:text="@string/scholarship_deadline_label"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/tv_scholarship_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/scholarship_deadline"
                android:layout_weight="1.5"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/tv_scholarship_link_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.5"
                android:text="@string/scholarship_apply_link_label"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/tv_scholarship_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/scholarship_apply_link"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_weight="1.5"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>